[gd_scene load_steps=5 format=3 uid="uid://cp86txivesok6"]

[ext_resource type="Texture2D" uid="uid://hpmibc5dxtiu" path="res://icons/chevron-up-solid.svg" id="1_7l7p5"]
[ext_resource type="Script" path="res://ui/number_input.gd" id="1_lrd8r"]
[ext_resource type="Texture2D" uid="uid://cx7l7bwrvm8ss" path="res://icons/chevron-down-solid.svg" id="2_u8mrw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0glq5"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.301961, 0.301961, 1)
border_blend = true

[node name="NumberInput" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lrd8r")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="LabelContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="HBoxContainer/LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sample:"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0glq5")

[node name="NumberLabel" type="Label" parent="HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="UpButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("1_7l7p5")

[node name="DownButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_u8mrw")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/DownButton" to="." method="_on_down_button_pressed"]
